<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">欢迎</string>
    <string name="logo">标示</string>
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="app_name">说之</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="success_con_of">服务器连接成功</string>
    <string name="success_login">登录成功</string>
    <string name="internet_failure">请检查网络</string>
    <string name="internet_wake">网络不给力</string>
    <string name="uername_or_password_failure">账号或密码错误</string>
    <string name="success_rigester">注册成功</string>
    <string name="replicated_username">账号已存在</string>
    <string name="register">注册</string>
    <string name="registering">注册中</string>
    <string name="password:">密码:</string>
    <string name="username:">账号:</string>
    <string name="info">个人信息</string>
    <string name="society">社会</string>
    <string name="science">科学</string>
    <string name="environment">环境</string>
    <string name="women">女人</string>
    <string name="choose_topic_bar">chooseTopic</string>
    <string name="head_image">头像</string>
    <string name="setting">设置</string>
    <string name="surname">昵称</string>
    <string name="test_name">legend</string>
    <string name="grade">等级</string>
    <string name="failed_open_photo">打开相册失败</string>
    <string name="title">主\u0020题</string>
    <string name="re">return</string>
    <string name="send">发\u0020送</string>
    <string name="quit">退出</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="refresh_time">refreshTime</string>
    <string name="topicName">topicName</string>
    <string name="seeking">寻找对手中</string>
    <string name="connecting">连接中</string>
    <string name="nickname">账号／昵称</string>
    <string name="hint_account">说之帐号</string>
    <string name="hint_password">说之密码</string>
    <string name="hint_password_confirm">确认密码</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="return_to_mainview">返回</string>
    <string name="inconsistent">两次密码不一致</string>
    <string name="password_tip">请输入6到16位的账号和密码</string>
     <string name="use_third">使用第三方账号登录</string>
    <string name="wait_for_update">新功能待添加</string>
    <string name="subtitle">称号</string>
    <string name="favour">被赞</string>
    <string name="shit">被屎</string>
    <string name="cancel_requestateam">退出队列</string>
    <string name="cancel_requestateam_dialog">取消组队中</string>
    <string name="quitchat">退出聊天</string>
    <string name="dialog_positive">确认</string>
    <string name="dialog_negative">取消</string>
    <string name="no_memeber">退出房间</string>
    <string name="no_data">暂无数据</string>
    <string name="agree">赞</string>
    <string name="shit">屎</string>
    <string name="avatar_failure">头像设置失败 请检查网络</string>
    <string name="login_with_talky">说\u0020\u0020之\u0020\u0020帐\u0020\u0020号\u0020\u0020登\u0020\u0020录</string>
    <string name="login_weibo_talky">新\u0020\u0020浪\u0020\u0020微\u0020\u0020博\u0020\u0020登\u0020\u0020录</string>
    <string name="login_join_talky">加\u0020\u0020入\u0020\u0020说\u0020\u0020之</string>
    <string name="uploading_avatar">正在上传头像</string>
    <string name="show_occupants">查看房间成员</string>
    <string name="occupants">旁观</string>
    <string name="background_seek">暂未发现对手 是否进入后台匹配</string>

</resources>
