<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="#cccccc"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/userNameEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/login_edit"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:text="hankwing" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edit"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="123456" >
    </EditText>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/login" />
    
    <Button
        android:id="@+id/registBtn"
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" />

    

</LinearLayout>