<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_login_fields"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/register_account"
        android:layout_marginTop="80dp"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:imeOptions="actionNext"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:hint="@string/hint_account" />
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/login_align" />
    
    <EditText 
        android:id="@+id/register_password"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:background="@null"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:hint="@string/hint_password" />
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/login_align" />
    
    <EditText 
        android:id="@+id/register_retype_password"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:background="@null"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:hint="@string/hint_password_confirm" />
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/login_align" />
    
    <ImageView 
        android:id="@+id/register"
        android:layout_marginTop="35dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/register_join" />

    

</LinearLayout>